Fixed layout bugs

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,6 +4,9 @@
 // File Imports
 @use 'variables' as *
 
+*
+  box-sizing: border-box
+
 body
   background-color: #101010
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif
@@ -25,6 +28,7 @@ h2
   font-weight: 700
 
 p
+  width: 100%
   margin: 12px 0
   font-size: 18px
   line-height: 24px
@@ -56,6 +60,7 @@ ul
 // Header
 
 header
+  width: 100%
   padding-top: 20px
   user-select: none
 
@@ -105,6 +110,7 @@ main
   padding: 0 20px
 
 section
+  width: 100%
   padding-bottom: 12px
   border-bottom: 1px solid #222
 
